Load index content from a markdown file

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+$section-padding: 2rem 1.5rem;
+
 @import "~bulma/bulma";
 @import "~prism-themes/themes/prism-ghcolors.css";
 
