--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,11 @@
 @charset "utf-8";
 
+$primary: #3c78d8;
+$info: #54c0f2;
+$success: #83ef40;
+$warning: #edf73b;
+$danger: #f42474;
+
 $section-padding: 2rem 1.5rem;
 
 @import "~bulma/bulma";
