Change hamburger menu color to be more visible

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,7 @@ $info: #54c0f2;
 $success: #83ef40;
 $warning: #edf73b;
 $danger: #f42474;
+$navbar-burger-color: inherit;
 
 $section-padding: 2rem 1.5rem;
 
