--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,6 +12,8 @@ $section-padding: 2rem 1.5rem;
 @import "~bulma/bulma";
 @import "~prism-themes/themes/prism-ghcolors.css";
 
+@import "grid";
+
 // avoid bulma and prism css conflicts
 // https://www.darraghoriordan.com/2019/01/20/bulma-prismjs-in-gatsby-css-conflicts/
 .token.tag,
