--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,6 +12,7 @@ $section-padding: 2rem 1.5rem;
 @import "~bulma/bulma";
 @import "~prism-themes/themes/prism-ghcolors.css";
 
+@import "button";
 @import "grid";
 
 // avoid bulma and prism css conflicts
