--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,6 +14,7 @@ $section-padding: 2rem 1.5rem;
 
 @import "button";
 @import "grid";
+@import "nav";
 
 // avoid bulma and prism css conflicts
 // https://www.darraghoriordan.com/2019/01/20/bulma-prismjs-in-gatsby-css-conflicts/
