Use a sticky nav (instead of the builtin bulma fixed one)
Yes, this was fiddly to eventually decide on. It's not ideal, as sticky
positioning is perfectly supported on everything, however, for now it'll
work. Also, even it fails, the default fallback will just be to not have
a sticky header at all, so it'll be fine.

The official bulma solution is really difficult to pull off, mostly
because, it's an incredible pain in the ass to add classnames to the
body or html elements well. It can be done, but with a bunch of annoying
caveats.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,6 +13,7 @@ $section-padding: 2rem 1.5rem;
 @import "~prism-themes/themes/prism-ghcolors.css";
 
 @import "button";
+@import "nav";
 @import "grid";
 
 // avoid bulma and prism css conflicts
