--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -25,6 +25,19 @@ html {
   min-height: stretch;
 }
 
+.content {
+  .columns {
+    .column {
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 250px;
+      }
+    }
+  }
+}
+
 @import "button";
 @import "nav";
 @import "grid";
