Hack to fix focus color in navbar

--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -4,3 +4,9 @@ nav.navbar {
     top: 0;
   }
 }
+
+nav.navbar .navbar-item {
+  &:focus {
+    background-color: bulmaDarken($primary, 5%);
+  }
+}
