Add blog previews on home page

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -38,6 +38,13 @@ html {
   }
 }
 
+.is-fullwidth {
+  width: 100%;
+}
+.is-fullheight {
+  height: 100%;
+}
+
 @import "button";
 @import "nav";
 @import "grid";
