--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -2,16 +2,17 @@
 
 $grid-gap: 1rem;
 
-.grid-custom {
+.custom-grid {
   display: grid;
 
-  .grid-item-custom {
+  .custom-grid-item {
     padding-left: $grid-gap / 2;
     padding-right: $grid-gap / 2;
     padding-top: $grid-gap / 2;
     padding-bottom: $grid-gap / 2;
 
     & > * {
+      display: inline-block;
       width: 100%;
       height: 100%;
     }
@@ -19,19 +20,19 @@ $grid-gap: 1rem;
 }
 
 @include mobile {
-  .grid-custom {
+  .custom-grid {
     grid-template-columns: 1fr;
   }
 }
 
 @include tablet {
-  .grid-custom {
+  .custom-grid {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @include desktop {
-  .grid-custom {
+  .custom-grid {
     grid-template-columns: repeat(3, 1fr);
   }
 }
