--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -1,15 +1,17 @@
 @charset "utf-8";
+@use "sass:math";
 
 $grid-gap: 1rem;
+$grid-gap-half: math.div($grid-gap, 2);
 
 .custom-grid {
   display: grid;
 
   .custom-grid-item {
-    padding-left: $grid-gap / 2;
-    padding-right: $grid-gap / 2;
-    padding-top: $grid-gap / 2;
-    padding-bottom: $grid-gap / 2;
+    padding-left: $grid-gap-half;
+    padding-right: $grid-gap-half;
+    padding-top: $grid-gap-half;
+    padding-bottom: $grid-gap-half;
 
     & > * {
       display: inline-block;
