Add a simple loading bar

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -49,6 +49,7 @@ html {
 @import "nav";
 @import "grid";
 @import "sidebar";
+@import "loader";
 
 // avoid bulma and prism css conflicts
 // https://www.darraghoriordan.com/2019/01/20/bulma-prismjs-in-gatsby-css-conflicts/
