--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,12 +1,10 @@
-nav.navbar {
-  &.is-sticky-custom {
-    position: sticky;
-    top: 0;
-  }
-}
-
 nav.navbar .navbar-item {
   &:focus {
     background-color: bulmaDarken($primary, 5%);
   }
+}
+.is-sticky-nav {
+  z-index: $navbar-z;
+  position: sticky;
+  top: 0;
 }
