Fix up browser compatibility misery

--- a/src/styles/_loader.scss
+++ b/src/styles/_loader.scss
@@ -1,8 +1,7 @@
 $duration: 2s;
 
 .navbar-loader {
-  position: sticky;
-  top: 3.25rem;
+  position: relative;
   width: 100vw;
   height: 2px;
   z-index: 100;
