Add docker to personal website

--- a/src/styles/hacks.scss
+++ b/src/styles/hacks.scss
@@ -35,3 +35,9 @@
 .transistor.exited {
   z-index: 200;
 }
+
+// Show shadow of card header over card image
+.card .card-header {
+  position: relative;
+  z-index: 10;
+}
