--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -39,11 +39,11 @@ html {
 .content {
   .columns {
     .column {
-      img {
+      .gatsby-resp-image-wrapper {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        max-width: 250px;
+        max-width: 250px !important;
       }
     }
   }
