fix: update twitter description meta property
Signed-off-by: Justin Chadwell <me@jedevc.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -37,7 +37,7 @@
   <meta property="og:type" content="website">
 
   <meta property="twitter:title" content="{{ $title }}">
-  <meta property="twitter:description" content="{$creator $description }}">
+  <meta property="twitter:description" content="{{ $description }}">
   {{ with $creator }}
     <meta property="twitter:creator" content="{{ . }}">
   {{ end }}
